# mediawiki-annotate

./: .gitignore  .gitlab-ci.yml  .gitmodules  AnnotationExport.hs  AttriRank.hs  BuildToc.hs  Cat.hs  ConcurrentMap.hs  DenseMapping.hs  DeriveToplevelQrels.hs  DetectDuplicateParagraphs.hs  Dijkstra.hs  DumpPages.hs  Entities.hs  Export.hs  Extract.hs  ExtractKnowledgeBase.hs  ExtractKnowledgeBaseMain.hs  ExtractLinkContexts.hs  FifoChannel.hs  FillMetadata.hs  FillMetadataMain.hs  FilterPages.hs  FilterPred.hs  ForkPipe.hs  GloveEmbedding.hs  Graph.hs  GraphExpansion.hs  GraphExpansionExperiments.hs  GraphExpansionMain.hs  GraphExpansionTopNPerGraphMain.hs  Import.hs  LegalEntityIds.hs  Main.hs  NodeMapping.hs  PageRank.hs  ParagraphToWarc.hs  README.mkd  Retrieve.hs  SeedEntities.hs  (+17 more)
annotation-interface/: Generate.hs  trec-car-annotation-interface.cabal
assessment-eval/: Agreement.hs  AssessmentTime.hs  ChangeGradedScale.hs  MergeAnnotations.hs  SplitPsgEntityAnnotations.hs  assessment-eval.cabal
assessment-eval/src/: AssessmentEval.hs
benchquality/: AppendixDesc.hs  AppendixTable.hs  ChronbachsAlpha.hs  Kendall.hs  QrelsIntersect.hs  RunCombination.hs  benchquality.cabal
benchquality/src/: TrecEvalFile.hs
car-baselines/: CarBaselines.hs  ChangeLog.md  EntityRankingToEntityLeadPassage.hs  EntitySearch.hs  GalagoQuery.hs  RankEntities.hs  Test.hs  car-baselines.cabal
crate/: CrateMain.hs  crate.cabal
crate/src/: ConvertToCrateData.hs
db-export/: DbExport.hs  db-export.cabal
dbpedia-entity-import/: DBpediaEntityMain.hs  HazyMemoryImportMain.hs  ToponymGroundTruthParser.hs  ToponymTagMeMain.hs  dbpedia-entity-import.cabal
ent-rank/: EntRankMain.hs  ent-rank.cabal
ent-rank-repos/graph-algorithms/: graph-algorithms.cabal
ent-rank-tools/: ent-rank-tools.cabal
ent-rank-tools/src/: AspectUtils.hs  GridFeatures.hs  MultiTrecRunFile.hs  TrainAndStore.hs
ent-rank/src/: LookupWrapper.hs  NodeAndEdgeFeatures.hs
epfl-section-recommendation/: LICENSE  Main.hs  epfl-section-recommendation.cabal
evalmetrics/: CHANGELOG.md  LICENSE  evalmetrics.cabal
evalmetrics/src/: EvalConfusionMatrix.hs
filter-duplicates/: DuplicatesRewriteTable.hs  FindDuplicates.hs  Laura.hs  MapParagraphIds.hs  MinHash.hs  RewriteDuplicates.hs  Test.hs  TestDuplicates.hs  Utils.hs  Word1024.hs  filter-duplicates.cabal
filter-duplicates/Bloom/: Naive.hs
filter-duplicates/cbits/: bench.c  bloom.c
filter-duplicates/src/: ConnectedComponent.hs  IntSet.hs  Utils.hs
fork-map/: Wrapper.hs  fork-map.cabal
graph-expansion/: AttriRank.hs  BuildEdgeDocIndex.hs  BuildEntityIndex.hs  BuildKbIndex.hs  DenseMapping.hs  Dijkstra.hs  EdgeDocCorpus.hs  EdgeDocCorpusMain.hs  EdgeDocIndex.hs  EdgeDocRetrieval.hs  Graph.hs  GraphExpansion.hs  GraphExpansionExperiments.hs  GraphExpansionFeatureGeneration.hs  GraphExpansionMain.hs  GraphRetrieval.hs  LICENSE  MultiTrecRunFile.hs  PageRank.hs  PageRankOnAll.hs  ParagraphRetrieval.hs  RemoveSeedsFromQrels.hs  SeedEntities.hs  SupervisedGridRun.hs  WriteRanking.hs  ZScore.hs  trec-car-graph-expansion.cabal
graph-expansion/src/: AspectUtils.hs  EdgeDocCorpus.hs  GraphExpansion.hs  GraphExpansionExperiments.hs  GridFeatures.hs  MultiTrecRunFile.hs  TrainAndStore.hs  TrainUtils.hs  WriteRanking.hs
learning-to-walk/: GraphExpansionFeatureGeneration.hs  PageDocCorpusMain.hs  learning-to-walk.cabal
learning-to-walk/src/: CandidateGraph.hs  LookupWrapper.hs  NodeAndEdgeFeatures.hs
mediawiki-import/: ConfigFile.hs  Import.hs  Main.hs  Templates.hs  TrecCarImport.hs  Utils.hs  config.yaml  mediawiki-import.cabal  test.xml
miso-assessment/: Admin.hs  GoldArticle.hs  List.hs  ListL.hs  Main.hs  Minimal.hs  MisoAssessmentMain.hs  Test.hs  TqaNewHeading.hs  app.cabal  app.nix  default.nix  index.html  run-web-server.sh  start-js-env.sh  start-web.sh  sync-treccar2.sh
miso-assessment/data/: UNH-p-l2r_Aerobic_fermentation.json  UNH-p-l2r_Aged_care_in_Australia.json  UNH-p-l2r_Algorithmic_bias.json  UNH-p-l2r_Alternative_medicine.json  UNH-p-l2r_Arab_slave_trade.json  UNH-p-l2r_Atomic_force_microscopy.json  UNH-p-l2r_Blockchain.json  UNH-p-l2r_Blue-ringed_octopus.json  UNH-p-l2r_Breakdancing.json  UNH-p-l2r_Chatbot.json  UNH-p-l2r_Chiropractic.json  UNH-p-l2r_Darknet_market.json  UNH-p-l2r_Daylight_saving_time.json  UNH-p-l2r_Economics_of_bitcoin.json  UNH-p-l2r_Eggnog.json  UNH-p-l2r_Electric_car.json  UNH-p-l2r_Entomophagy.json  UNH-p-l2r_Great_white_shark.json  UNH-p-l2r_Gunshot_wound.json  UNH-p-l2r_Healthcare_in_Canada.json  UNH-p-l2r_Herbalism.json  UNH-p-l2r_Huguenots.json  UNH-p-l2r_Hybrid_electric_vehicle.json  UNH-p-l2r_Loot_box.json  UNH-p-l2r_Mate_(drink).json  UNH-p-l2r_Microaggression.json  UNH-p-l2r_Opioid_epidemic.json  UNH-p-l2r_Question_mark.json  UNH-p-l2r_Radiocarbon_dating.json  UNH-p-mixed_Chatbot.json  UNH-p-sdm_Chatbot.json  assessor_assignments.json  blafasel.jsonl  water-distribution.json
miso-assessment/html/: admin.html  assess.css  assess.html  gold.html  index.html  list-l.html  list.html  logout-success.html  logout.html  minimal.html  test.html  tqa.html
miso-postprocessing/: AssessmentsToQrels.hs  CarY3AssessmentPageEval.hs  MergeAssessmentPages.hs  miso-postprocessing.cabal
multilang-car/: LangExtract.hs  LangIndex.hs  NOTES  multilang-car.cabal
tag-me/: TagMeMain.hs  tag-me.cabal
tqa-import/: Main.hs  MainTQA2.hs  TQA.hs  TqaY3ExportMain.hs  TqaY3TopicsMain.hs  TrecTopicImport.hs  tqa-import.cabal
trec-car-tools/: BuildToc.hs  Cat.hs  DeriveToplevelQrels.hs  DetectDuplicateParagraphs.hs  DumpPages.hs  Export.hs  ExtractKnowledgeBaseMain.hs  ExtractLinkContexts.hs  FeatureSpace2.hs  FilterPages.hs  FilterPred.hs  LegalEntityIds.hs  MergeDuplicateSections.hs  QrelsModify.hs  SplitParagraphs.hs  TestEntityPassageParsing.hs  TransformContent.hs  TrecRunModify.hs  ValidateBenchmark.hs  mediawiki-annotate.cabal  trec-car-tools.cabal
trec-car-types/: trec-car-types.cabal
trec-news/: Export.hs  Load.hs  WapoCorpus.hs  trec-news.cabal
wordnet-export/: SynsetExport.hs  default.nix  wordnet-export.cabal
(+157 files in other folders)
