name:                mediawiki-annotate
version:             0.1.0.0
synopsis:            Wikimedia annotator project
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
-- copyright:           
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Types
                       AnnotationsFile
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >=4.9 && <4.10,
                       aeson >= 1.0,
                       binary-serialise-cbor >=0.1 && <0.2,
                       bytestring >= 0.10,
                       filepath >=1.4 && <1.5,
                       unordered-containers >=0.2 && <0.3,
                       mmap,
                       hashable >= 1.2,
                       base16-bytestring >= 0.1,
                       cryptohash-sha1,
                       text,
                       mediawiki-parser >= 0.1

executable wiki-extract
  main-is:             Extract.hs
  ghc-options:         -Wall -rtsopts
  build-depends:       base >=4.9 && <4.10,
                       bytestring,
                       text,
                       unordered-containers >= 0.2,
                       pipes,
                       pipes-bytestring,
                       dlist,
                       network-uri,
                       binary-serialise-cbor,
                       mediawiki-parser >= 0.1,
                       mediawiki-annotate

executable wiki-annotate
  main-is:             Main.hs
  other-extensions:    DeriveGeneric, TypeApplications, RecordWildCards, ViewPatterns, OverloadedStrings, RankNTypes, ScopedTypeVariables, GADTs, TemplateHaskell, GeneralizedNewtypeDeriving, QuasiQuotes, StandaloneDeriving, BangPatterns
  ghc-options:         -Wall -rtsopts
  build-depends:       base >=4.9 && <4.10,
                       binary-serialise-cbor >=0.1 && <0.2,
                       text >=1.2 && <1.3,
                       bytestring >=0.10 && <0.11,
                       filepath >=1.4 && <1.5,
                       attoparsec >=0.13 && <0.14,
                       exceptions >=0.8 && <0.9,
                       lens >=4.14 && <4.15,
                       pipes >=4.1 && <4.3,
                       pipes-bytestring >=2.1 && <2.2,
                       pipes-zlib >=0.4 && <0.5,
                       optparse-applicative >=0.12 && <0.13,
                       pipes-attoparsec >=0.5 && <0.6,
                       free >=4.12 && <4.13,
                       transformers >=0.5 && <0.6,
                       time >=1.6 && <1.7,
                       charset >=0.3 && <0.4,
                       hexpat >=0.20 && <0.21,
                       deepseq >=1.4 && <1.5,
                       split >=0.2 && <0.3,
                       parallel >=3.2 && <3.3,
                       async >=2.1 && <2.2,
                       pipes-concurrency >=2.0 && <2.1,
                       postgresql-simple >=0.5 && <0.6,
                       mediawiki-annotate,
                       unordered-containers >=0.2 && <0.3,
                       mediawiki-parser
  default-language:    Haskell2010

executable wiki-dump-annotations
  main-is:             Export.hs
  other-extensions:    DeriveGeneric, TypeApplications, RecordWildCards, ViewPatterns, OverloadedStrings, RankNTypes, ScopedTypeVariables, GADTs, TemplateHaskell, GeneralizedNewtypeDeriving, QuasiQuotes, StandaloneDeriving, BangPatterns
  ghc-options:         -Wall
  build-depends:       base >=4.9 && <4.10,
                       binary-serialise-cbor >=0.1 && <0.2,
                       bytestring >= 0.10,
                       text,
                       mediawiki-annotate,
                       mediawiki-parser >= 0.1
  default-language:    Haskell2010

executable wiki-build-toc
  main-is:             BuildToc.hs
  other-extensions:    DeriveGeneric, TypeApplications, RecordWildCards, ViewPatterns, OverloadedStrings, RankNTypes, ScopedTypeVariables, GADTs, TemplateHaskell, GeneralizedNewtypeDeriving, QuasiQuotes, StandaloneDeriving, BangPatterns
  ghc-options:         -Wall
  build-depends:       base >=4.9 && <4.10,
                       aeson >= 1.0,
                       binary-serialise-cbor >=0.1 && <0.2,
                       bytestring >= 0.10,
                       containers,
                       text,
                       mediawiki-annotate,
                       mediawiki-parser >= 0.1
  default-language:    Haskell2010