name:                trec-car-tools
version:             0.1.0.0
synopsis:            Wikimedia annotator project
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
-- copyright:           
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     CAR.Types
                       CAR.AnnotationsFile
                       CAR.CarExports
                       CAR.Utils
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >=4.9 && <4.10,
                       aeson >= 1.0,
                       binary,
                       binary-serialise-cbor >=0.1 && <0.2,
                       bytestring >= 0.10,
                       deepseq,
                       filepath >=1.4 && <1.5,
                       unordered-containers >=0.2 && <0.3,
                       containers,
                       network-uri,
                       dlist,
                       mmap,
                       hashable >= 1.2,
                       base16-bytestring >= 0.1,
                       cryptohash-sha1,
                       text,
                       mediawiki-parser >= 0.1

executable trec-car-import
  main-is:             Import.hs
  other-modules:       Entities
  other-extensions:    DeriveGeneric, TypeApplications, RecordWildCards, ViewPatterns, OverloadedStrings, RankNTypes, ScopedTypeVariables, GADTs, TemplateHaskell, GeneralizedNewtypeDeriving, QuasiQuotes, StandaloneDeriving, BangPatterns
  ghc-options:         -Wall -rtsopts -threaded
  build-depends:       base >=4.9 && <4.10,
                       binary-serialise-cbor >=0.1 && <0.2,
                       text >=1.2 && <1.3,
                       bytestring >=0.10 && <0.11,
                       filepath >=1.4 && <1.5,
                       attoparsec >=0.13 && <0.14,
                       exceptions >=0.8 && <0.9,
                       lens >=4.14 && <4.16,
                       pipes >=4.1 && <4.3,
                       pipes-bytestring >=2.1 && <2.2,
                       pipes-zlib >=0.4 && <0.5,
                       optparse-applicative >=0.12 && <0.14,
                       pipes-attoparsec >=0.5 && <0.6,
                       free >=4.12 && <4.13,
                       transformers >=0.5 && <0.6,
                       time >=1.6 && <1.7,
                       charset >=0.3 && <0.4,
                       hexpat >=0.20 && <0.21,
                       deepseq >=1.4 && <1.5,
                       split >=0.2 && <0.3,
                       parallel >=3.2 && <3.3,
                       async >=2.1 && <2.2,
                       binary,
                       fork-map,
                       stm,
                       unix >= 2.7,
                       postgresql-simple >=0.5 && <0.6,
                       unordered-containers >=0.2 && <0.3,
                       trec-car-tools,
                       mediawiki-parser
  default-language:    Haskell2010

executable trec-car-export
  main-is:             Export.hs
  other-extensions:    DeriveGeneric, TypeApplications, RecordWildCards, ViewPatterns, OverloadedStrings, RankNTypes, ScopedTypeVariables, GADTs, TemplateHaskell, GeneralizedNewtypeDeriving, QuasiQuotes, StandaloneDeriving, BangPatterns
  ghc-options:         -Wall
  build-depends:       base >=4.9 && <4.10,
                       binary-serialise-cbor >=0.1 && <0.2,
                       bytestring >= 0.10,
                       containers,
                       text,
                       optparse-applicative,
                       filepath,
                       trec-car-tools,
                       mediawiki-parser >= 0.1
  default-language:    Haskell2010

executable trec-car-build-toc
  main-is:             BuildToc.hs
  other-extensions:    DeriveGeneric, TypeApplications, RecordWildCards, ViewPatterns, OverloadedStrings, RankNTypes, ScopedTypeVariables, GADTs, TemplateHaskell, GeneralizedNewtypeDeriving, QuasiQuotes, StandaloneDeriving, BangPatterns
  ghc-options:         -Wall
  build-depends:       base >=4.9 && <4.10,
                       aeson >= 1.0,
                       binary,
                       binary-serialise-cbor >=0.1 && <0.2,
                       bytestring >= 0.10,
                       containers,
                       text,
                       trec-car-tools,
                       mediawiki-parser >= 0.1
  default-language:    Haskell2010

executable trec-car-filter
  main-is:             FilterPages.hs
  other-modules:       FilterPred
  ghc-options:         -Wall
  build-depends:       base >=4.9 && <4.10,
                       bytestring,
                       unordered-containers,
                       trifecta >= 1.5,
                       parsers >= 0.12,
                       ansi-wl-pprint,
                       text,
                       optparse-applicative >= 0.12,
                       hashable,
                       trec-car-tools
  default-language:    Haskell2010

executable trec-car-transform-content
  main-is:             TransformContent.hs
  ghc-options:         -Wall
  build-depends:       base >=4.9 && <4.10,
                       bytestring,
                       unordered-containers,
                       trifecta >= 1.5,
                       parsers >= 0.12,
                       ansi-wl-pprint,
                       text,
                       optparse-applicative >= 0.12,
                       hashable,
                       trec-car-tools
  default-language:    Haskell2010

executable trec-car-extract-kb
  main-is:             ExtractKnowledgeBaseMain.hs
  ghc-options:         -Wall
  other-modules:       ExtractKnowledgeBase
  build-depends:       base >=4.9 && <4.10,
                       bytestring,
                       unordered-containers,
                       text,
                       containers,
                       simplir-galago,
                       optparse-applicative >= 0.12,
                       hashable,
                       trec-car-tools
  default-language:    Haskell2010

executable trec-car-dump
  main-is:             DumpPages.hs
  ghc-options:         -Wall
  build-depends:       base >=4.9 && <4.10,
                       bytestring,
                       containers,
                       unordered-containers,
                       text,
                       optparse-applicative >= 0.12,
                       trec-car-tools
  default-language:    Haskell2010

executable trec-car-detect-duplicate-paragraphs 
  main-is:             DetectDuplicateParagraphs.hs
  ghc-options:         -Wall
  build-depends:       base >=4.9 && <4.10,
                       bytestring,
                       containers,
                       unordered-containers,
                       text,
                       optparse-applicative >= 0.12,
                       trec-car-tools
  default-language:    Haskell2010


executable trec-car-extract-link-contexts
  main-is:             ExtractLinkContexts.hs
  ghc-options:         -Wall
  build-depends:       base >=4.9 && <4.10,
                       bytestring,
                       unordered-containers,
                       text,
                       containers,
                       simplir-galago,
                       optparse-applicative >= 0.12,
                       hashable,
                       trec-car-tools,
                       dlist
  default-language:    Haskell2010


executable trec-car-graph-expansion
  main-is:             GraphExpansionMain.hs
  other-modules:       GraphExpansion
                       Dijkstra
                       PageRank
                       WriteRanking
                       Retrieve
  ghc-options:         -Wall -threaded -rtsopts
  build-depends:       base >=4.9 && <4.10,
                       async,
                       bytestring,
                       unordered-containers,
                       text,
                       array,
                       containers,
                       deepseq,
                       simplir-galago,
                       optparse-applicative >= 0.12,
                       hashable,
                       heaps,
                       psqueues,
                       transformers,
                       simplir,
                       pipes,
                       binary,
                       log-domain,
                       charset,
                       snowball >= 1.0 && <1.1,
                       foldl,
                       unix,
                       fork-map,
                       time,
                       trec-car-tools
  default-language:    Haskell2010
