name:                trec-car-tools
version:             0.1.0.0
synopsis:            Wikimedia annotator project
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2017 Ben Gamari and Laura Dietz
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     CAR.Types
                       CAR.Types.Provenance
                       CAR.Types.AST
                       CAR.Types.AST.Pretty
                       CAR.Types.CborList
                       CAR.Types.Files
                       CAR.Types.Orphans
                       CAR.RunFile
                       CAR.AnnotationsFile
                       CAR.CarExports
                       CAR.Utils
                       CAR.Utils.Redirects
                       CAR.TocFile
                       CAR.Retrieve
                       CAR.KnowledgeBase
                       CAR.FillMetadata
                       WikiData
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  build-depends:       base >=4.9 && <4.11,
                       aeson >= 1.0,
                       binary,
                       cborg,
                       cborg-json,
                       lens,
                       serialise >= 0.1,
                       bytestring >= 0.10,
                       deepseq,
                       filepath >=1.4 && <1.5,
                       unordered-containers >=0.2 && <0.3,
                       containers,
                       snowball >= 1.0 && <1.1,
                       charset >=0.3 && <0.4,
                       log-domain,
                       foldl,
                       network-uri,
                       dlist,
                       mmap,
                       hashable >= 1.2,
                       base16-bytestring >= 0.1,
                       cryptohash-sha1,
                       text,
                       simplir,
                       mediawiki-parser >= 0.1

executable trec-car-cat
  main-is:             Cat.hs
  other-extensions:    DeriveGeneric, TypeApplications, RecordWildCards, ViewPatterns, OverloadedStrings, RankNTypes, ScopedTypeVariables, GADTs, TemplateHaskell, GeneralizedNewtypeDeriving, QuasiQuotes, StandaloneDeriving, BangPatterns
  ghc-options:         -Wall
  build-depends:       base,
                       serialise,
                       bytestring >= 0.10,
                       optparse-applicative,
                       trec-car-tools
  default-language:    Haskell2010

executable trec-car-export
  main-is:             Export.hs
  other-extensions:    DeriveGeneric, TypeApplications, RecordWildCards, ViewPatterns, OverloadedStrings, RankNTypes, ScopedTypeVariables, GADTs, TemplateHaskell, GeneralizedNewtypeDeriving, QuasiQuotes, StandaloneDeriving, BangPatterns
  ghc-options:         -Wall
  build-depends:       base,
                       serialise,
                       bytestring >= 0.10,
                       containers,
                       text,
                       optparse-applicative,
                       filepath,
                       trec-car-tools,
                       mediawiki-parser >= 0.1
  default-language:    Haskell2010

executable trec-car-build-toc
  main-is:             BuildToc.hs
  other-extensions:    DeriveGeneric, TypeApplications, RecordWildCards, ViewPatterns, OverloadedStrings, RankNTypes, ScopedTypeVariables, GADTs, TemplateHaskell, GeneralizedNewtypeDeriving, QuasiQuotes, StandaloneDeriving, BangPatterns
  ghc-options:         -Wall
  build-depends:       base,
                       aeson >= 1.0,
                       binary,
                       serialise,
                       bytestring >= 0.10,
                       containers,
                       text,
                       trec-car-tools,
                       optparse-applicative,
                       mediawiki-parser >= 0.1
  default-language:    Haskell2010

executable trec-car-filter
  main-is:             FilterPages.hs
  other-modules:       FilterPred
  ghc-options:         -Wall
  build-depends:       base,
                       bytestring,
                       unordered-containers,
                       trifecta >= 1.5,
                       parsers >= 0.12,
                       ansi-wl-pprint,
                       text,
                       optparse-applicative >= 0.12,
                       binary-serialise-cbor,
                       hashable,
                       trec-car-tools
  default-language:    Haskell2010

executable trec-car-transform-content
  main-is:             TransformContent.hs
  ghc-options:         -Wall
  build-depends:       base,
                       bytestring,
                       unordered-containers,
                       trifecta >= 1.5,
                       parsers >= 0.12,
                       ansi-wl-pprint,
                       text,
                       optparse-applicative >= 0.12,
                       hashable,
                       trec-car-tools
  default-language:    Haskell2010

executable trec-car-legal-entity-ids
  main-is:             LegalEntityIds.hs
  ghc-options:         -Wall
  build-depends:       base,
                       bytestring,
                       unordered-containers,
                       text,
                       containers,
                       simplir-galago,
                       optparse-applicative >= 0.12,
                       hashable,
                       filepath,
                       trec-car-tools
  default-language:    Haskell2010

executable trec-car-extract-kb
  main-is:             ExtractKnowledgeBaseMain.hs
  ghc-options:         -Wall
  build-depends:       base,
                       bytestring,
                       unordered-containers,
                       text,
                       containers,
                       simplir-galago,
                       optparse-applicative >= 0.12,
                       hashable,
                       trec-car-tools
  default-language:    Haskell2010

executable trec-car-dump
  main-is:             DumpPages.hs
  ghc-options:         -Wall
  build-depends:       base,
                       bytestring,
                       containers,
                       unordered-containers,
                       text,
                       serialise,
                       optparse-applicative >= 0.12,
                       trec-car-tools
  default-language:    Haskell2010

executable trec-car-detect-duplicate-paragraphs 
  main-is:             DetectDuplicateParagraphs.hs
  ghc-options:         -Wall
  build-depends:       base,
                       bytestring,
                       containers,
                       unordered-containers,
                       text,
                       optparse-applicative >= 0.12,
                       trec-car-tools
  default-language:    Haskell2010


executable trec-car-extract-link-contexts
  main-is:             ExtractLinkContexts.hs
  ghc-options:         -Wall
  build-depends:       base,
                       bytestring,
                       unordered-containers,
                       text,
                       containers,
                       simplir-galago,
                       optparse-applicative >= 0.12,
                       hashable,
                       trec-car-tools,
                       dlist
  default-language:    Haskell2010


executable trec-car-trec-run-filter
  main-is:             TrecRunFilter.hs
  ghc-options:         -Wall -threaded -rtsopts
  build-depends:       base,
                       deepseq,
                       trec-car-tools,
                       optparse-applicative,
                       simplir,
                       text,
                       hashable,
                       serialise
  default-language:    Haskell2010


executable trec-car-fill-metadata
  main-is:             FillMetadataMain.hs
  ghc-options:         -Wall -threaded -rtsopts
  build-depends:       base,
                       trec-car-tools,
                       optparse-applicative,
                       unordered-containers,
                       simplir,
                       text,
                       hashable,
                       serialise
  default-language:    Haskell2010

test-suite tests
  main-is:             Test.hs
  type:                exitcode-stdio-1.0
  build-depends:       base,
                       text,
                       tasty,
                       tasty-silver,
                       tasty-hunit,
                       unordered-containers,
                       trec-car-tools,
                       tagged
  hs-source-dirs:      ./, tests
  default-language:    Haskell2010