name:                assessment-eval
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2017 Ben Gamari
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     AssessmentEval
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-depends:       base >=4.9 && <4.11,
                       hashable >=1.2 && <1.3,
                       unordered-containers >=0.2 && <0.3,
                       text >=1.2 && <1.3,
                       filepath >= 1.4,
                       optparse-applicative >=0.14 && <0.15,
                       time,
                       simplir
  default-language:    Haskell2010


executable agreement
  main-is:             Agreement.hs
  other-extensions:    ScopedTypeVariables, GeneralizedNewtypeDeriving, RecordWildCards, OverloadedStrings
  build-depends:       base >=4.9 && <4.11,
                       hashable >=1.2 && <1.3,
                       unordered-containers >=0.2 && <0.3,
                       text >=1.2 && <1.3,
                       filepath >= 1.4,
                       optparse-applicative >=0.14 && <0.15,
                       assessment-eval,
                       simplir
  default-language:    Haskell2010

executable merge-annotations
  main-is:             MergeAnnotations.hs
  other-extensions:    ScopedTypeVariables, GeneralizedNewtypeDeriving, RecordWildCards, OverloadedStrings
  build-depends:       base >=4.9 && <4.11,
                       hashable >=1.2 && <1.3,
                       unordered-containers >=0.2 && <0.3,
                       text >=1.2 && <1.3,
                       filepath >= 1.4,
                       optparse-applicative >=0.14 && <0.15,
                       assessment-eval,
                       time,
                       simplir
  default-language:    Haskell2010
